# conversation_assistant_for_elderly_people

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  meson.build  set_envs.sh
api_manager/: CMakeLists.txt  api_manager.cpp  api_manager.hpp  meson.build
api_manager/include/api_manager/: api_manager.hpp  news_api.hpp  reminder_api.hpp  routine_api.hpp  wikipedia_api.hpp
interaction_db/: CMakeLists.txt  interaction_db.cpp  interaction_db.hpp  meson.build
interaction_db/include/interaction_db/: interaction_db.hpp
interaction_loop/: interaction_loop.cpp  interaction_loop.hpp  meson.build
llm_interface/: CMakeLists.txt  llm_interface.cpp  llm_interface.hpp  meson.build
prompt_processor/: CMakeLists.txt  Makefile  cmake_install.cmake  meson.build  prompt_processor.cpp  prompt_processor.hpp
prompt_processor/include/prompt_processor/: prompt_processor.hpp
prompt_processor/subprojects/: inja.wrap
prompt_processor/templates/: followup_interaction.txt  followup_interaction_new.txt  initial_interaction.txt  summary_interaction.txt
speech_components/: CMakeLists.txt
speech_components/include/speech_components/: asr_clients.hpp  whisper_cpp_client.hpp
task_scheduler/: CMakeLists.txt
task_scheduler/include/task_scheduler/: task_scheduler.hpp
tests/: CMakeLists.txt  test.cpp
utils/: CMakeLists.txt
utils/include/utils/: sdl_client.hpp
